[package]
name = "bevy_default_font"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["game-development", "gui", "graphics"]
repository = "https://github.com/lovelyyfiaaa/bevy_default_font"
readme = "README.md"
keywords = ["game", "gamedev", "graphics", "bevy"]
authors = ["Fiana Fortressia <fortressnordlys@outlook.com>"]
description = "Default font support for the Bevy game engine"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
replace_with = "0.1.7"

[dev-dependencies]
bevy = { version = "0.9.1", features = ["wayland"]}
